# gui-gal

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.sh
demo/wearenotart/: global_land_and_ocean_temperature_anomalies.json
design/: empty.pur  ginger.pur  ideas.txt  symbol-graph.kra  train.txt
python/: client.py  clipseg_server.py  cnn_recommender.py  gen_sd.py  img2img.py  policy_gradient.py  rtsr.py  voice_commands.py
python/logs/: txt2img_logs.csv
res/pureref/: scene.pur
res/shader/: postprocess.frag  postprocess.vert  quad.frag  quad.vert  test.frag  test.vert
src/: components.h  input.c  input.h  main.c  nvgutil.h  shared.h
tune/: commands.json
